Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86070

error: implicitly-declared ‘TestNamespace::QSSGRenderNode& TestNamespace::QSSGRenderNode::operator=(const TestNamespace::QSSGRenderNode&)’ is deprecated

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 5.15.1
    • 5.15.1
    • Quick: 3D
    • None
    • e9ad926411b6d2917a2ef1fd7b7a3629dee7ee4d (qt/qtquick3d/5.15) 601b742e9797d06f4ab0ecc1e6e6956024947906 (qt/qtquick3d/5.15)

      agent:2020/08/17 03:46:27 build.go:264: In file included from graphobjects/qssgrendercamera.cpp:32:
      agent:2020/08/17 03:46:27 build.go:264: graphobjects/qssgrendercamera_p.h: In member function ‘TestNamespace::QSSGRenderCamera& TestNamespace::QSSGRenderCamera::operator=(const TestNamespace::QSSGRenderCamera&)’:
      agent:2020/08/17 03:46:27 build.go:264: graphobjects/qssgrendercamera_p.h:79:38: error: implicitly-declared ‘TestNamespace::QSSGRenderNode& TestNamespace::QSSGRenderNode::operator=(const TestNamespace::QSSGRenderNode&)’ is deprecated [-Werror=deprecated-copy]
      agent:2020/08/17 03:46:27 build.go:264:    79 | struct Q_QUICK3DRUNTIMERENDER_EXPORT QSSGRenderCamera : public QSSGRenderNode
      agent:2020/08/17 03:46:27 build.go:264:       |                                      ^~~~~~~~~~~~~~~~
      agent:2020/08/17 03:46:27 build.go:264: In file included from ../../include/QtQuick3DRuntimeRender/5.15.1/QtQuick3DRuntimeRender/private/qssgrendernode_p.h:1,
      agent:2020/08/17 03:46:27 build.go:264:                  from graphobjects/qssgrendercamera_p.h:47,
      agent:2020/08/17 03:46:27 build.go:264:                  from graphobjects/qssgrendercamera.cpp:32:
      agent:2020/08/17 03:46:27 build.go:264: ../../include/QtQuick3DRuntimeRender/5.15.1/QtQuick3DRuntimeRender/private/../../../../../src/runtimerender/graphobjects/qssgrendernode_p.h:130:5: note: because ‘TestNamespace::QSSGRenderNode’ has user-provided ‘TestNamespace::QSSGRenderNode::QSSGRenderNode(const TestNamespace::QSSGRenderNode&)’
      agent:2020/08/17 03:46:27 build.go:264:   130 |     QSSGRenderNode(const QSSGRenderNode &inCloningObject);
      agent:2020/08/17 03:46:27 build.go:264:       |     ^~~~~~~~~~~~~~
      agent:2020/08/17 03:46:27 build.go:264: graphobjects/qssgrendercamera.cpp: In static member function ‘static void TestNamespace::QSSGRenderCamera::setupOrthographicCameraForOffscreenRender(TestNamespace::QSSGRenderTexture2D&, TestNamespace::QMatrix4x4&, TestNamespace::QSSGRenderCamera&)’:
      agent:2020/08/17 03:46:27 build.go:264: graphobjects/qssgrendercamera.cpp:198:17: note: synthesized method ‘TestNamespace::QSSGRenderCamera& TestNamespace::QSSGRenderCamera::operator=(const TestNamespace::QSSGRenderCamera&)’ first required here
      agent:2020/08/17 03:46:27 build.go:264:   198 |     outCamera = theTempCamera;
      agent:2020/08/17 03:46:27 build.go:264:       |                 ^~~~~~~~~~~~~
      agent:2020/08/17 03:46:28 build.go:264: g++ -c -include .pch/Qt5Quick3DRuntimeRenderTestInfix -pipe -g -std=c++1z -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -Wextra -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -Wno-stringop-overflow -Wno-format-overflow -Werror -Wno-error=cpp -Wno-error=deprecated-declarations -Wno-error=strict-overflow -D_REENTRANT -fPIC -DQT_NO_LINKED_LIST -DQT_NO_FOREACH -DQT_BUILD_QUICK3DRUNTIMERENDER_LIB -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_QUICK3DRUNTIMERENDER_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_QUICK3DASSETIMPORT_LIB -DQT_QUICK3DRENDER_LIB -DQT_QUICK3DUTILS_LIB -DQT_QUICK_LIB -DQT_GUI_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_NAMESPACE=TestNamespace -I. -I../../include -I../../include/QtQuick3DRuntimeRender -I../../include/QtQuick3DRuntimeRender/5.15.1 -I../../include/QtQuick3DRuntimeRender/5.15.1/QtQuick3DRuntimeRender -I../../include/QtQuick3DAssetImport/5.15.1 -I../../include/QtQuick3DAssetImport/5.15.1/QtQuick3DAssetImport -I../../include/QtQuick3DRender/5.15.1 -I../../include/QtQuick3DRender/5.15.1/QtQuick3DRender -I../../include/QtQuick3DUtils/5.15.1 -I../../include/QtQuick3DUtils/5.15.1/QtQuick3DUtils -I../../include/QtQuick3DAssetImport -I../../include/QtQuick3DRender -I../../include/QtQuick3DUtils -I/home/qt/work/install/include/QtGui/5.15.1 -I/home/qt/work/install/include/QtGui/5.15.1/QtGui -I/home/qt/work/install/include -I/home/qt/work/install/include/QtQuick -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtCore/5.15.1 -I/home/qt/work/install/include/QtCore/5.15.1/QtCore -I/home/qt/work/install/include/QtQmlModels -I/home/qt/work/install/include/QtQml -I/home/qt/work/install/include/QtNetwork -I/home/qt/work/install/include/QtCore -I.moc -I/usr/include/libdrm -I/home/qt/openssl-1.1.1g/include -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/qssgrenderimage.o graphobjects/qssgrenderimage.cpp
      agent:2020/08/17 03:46:29 build.go:264: cc1plus: all warnings being treated as errors
      agent:2020/08/17 03:46:29 build.go:264: Makefile:2026: recipe for target '.obj/qssgrendercamera.o' failed
      agent:2020/08/17 03:46:29 build.go:264: make[2]: *** [.obj/qssgrendercamera.o] Error 1
      agent:2020/08/17 03:46:29 build.go:264: make[2]: *** Waiting for unfinished jobs....
      agent:2020/08/17 03:46:31 build.go:264: make[2]: Leaving directory '/home/qt/work/qt/qtquick3d/src/runtimerender'
      agent:2020/08/17 03:46:31 build.go:264: Makefile:224: recipe for target 'sub-runtimerender-make_first-ordered' failed
      agent:2020/08/17 03:46:31 build.go:264: make[1]: *** [sub-runtimerender-make_first-ordered] Error 2
      agent:2020/08/17 03:46:31 build.go:264: make[1]: Leaving directory '/home/qt/work/qt/qtquick3d/src'
      agent:2020/08/17 03:46:31 build.go:264: Makefile:49: recipe for target 'sub-src-make_first' failed
      agent:2020/08/17 03:46:31 build.go:264: make: *** [sub-src-make_first] Error 2
      agent:2020/08/17 03:46:31 build.go:315: Process finished with error: exit status 2
      agent:2020/08/17 03:46:31 build.go:540: Executing scheduled instruction 1 of 1 - Upload all core dumps if there are some
      agent:2020/08/17 03:46:31 build.go:448: Skip uploading core files because CORE_FILES_PATH is not set in the environment
      agent:2020/08/17 03:46:31 build.go:545: 
      agent:2020/08/17 03:46:31 agent.go:272: Build failed
      agent:2020/08/17 03:46:31 agent.go:202: ERROR building: exit status 2
      INFO:workitem.py:611(87099): Agent FINISHED FAIL: <could not determine failure location - check log: /mnt/coin-storage-01/ci-working-dir/storage/qt/qtquick3d/a2e27c96856a65f8c6bf63abb234bdece51e2f22/LinuxUbuntu_18_04x86_64LinuxUbuntu_18_04x86_64GCCqtci-linux-Ubuntu-18.04-x86_64-77a7bb/9f364da83545b599ac365a1e052781efc09c7707/build_1597635746/log.txt.gz>: qt/qtquick3d/a2e27c96856a65f8c6bf63abb234bdece51e2f22/LinuxUbuntu_18_04x86_64LinuxUbuntu_18_04x86_64GCCqtci-linux-Ubuntu-18.04-x86_64-77a7bb/9f364da83545b599ac365a1e052781efc09c7707/Build
      INFO:workitem.py:693(87099): <a href="https://qtmetrics.intra.qt.io/d/nOAsINmZz/jimis-telegraf-vms?orgId=1&from=1597635799000&to=1597635992000&var-server=1595996360-95621">VM metrics</a>
      INFO:workitem.py:695(87099): <a href="https://qtmetrics.intra.qt.io/d/nOAsINNZz/jimis-telegraf-hosts?orgId=1&from=1597635799000&to=1597635992000&var-server=brave-guppy">Host metrics</a>
      

      Build log: https://testresults.qt.io/logs/qt/qtquick3d/a2e27c96856a65f8c6bf63abb234bdece51e2f22/LinuxUbuntu_18_04x86_64LinuxUbuntu_18_04x86_64GCCqtci-linux-Ubuntu-18.04-x86_64-77a7bbDocumentation_OutOfSourceBuild/9f364da83545b599ac365a1e052781efc09c7707/build_1597635748/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qt5/tasks/1597635524
      Tested changes (refs/builds/qtci/5.15/1597635522):
      https://codereview.qt-project.org/c/qt/qt5/+/309580/11 Update submodules on '5.15' in qt/qt5

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            janichol Andy Nichols
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes