Fix implicitly-declared assignment operator for QSSGRenderCamera

Fixes: QTBUG-86070
Change-Id: I5e71341179db2ee35394f6296626595faac5325e
Reviewed-by: Inho Lee <inho.lee@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>