src/runtimerender/graphobjects/qssgrendercamera_p.h
@@ -99,6 +99,7 @@ struct Q_QUICK3DRUNTIMERENDER_EXPORT QSSGRenderCamera : public QSSGRenderNode
     QRectF previousInViewport;
 
     QSSGRenderCamera();
+    QSSGRenderCamera& operator=(const QSSGRenderCamera& other) = default;
 
     QMatrix3x3 getLookAtMatrix(const QVector3D &inUpDir, const QVector3D &inDirection) const;
     // Set our position, rotation member variables based on the lookat target
